Refactor index.html for improved structure and formatting
- Corrected meta tags placement and formatting.
- Reformatted "Posts" section for consistent indentation and readability.
- Added "Contact" section with address, phone, and email inside the `<address>` tag.
- Updated copyright year to 2025.
- Improved overall HTML readability and alignment with project standards.

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <meta charset="UTF-8" />
     <title>Mr. Whiskers' Blog</title>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header>
@@ -39,70 +36,66 @@
         </p>
       </section>
       <section id="posts">
-            <h2>Posts</h2>
-            <article>
-              <h3>Mr. Whiskers' First Day Home</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-            </article>
-            
-            <!-- Add your article content here -->
-          </article>
-          <article>
-              <h3>Mr. Whiskers' First Bath</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-            </article>
-            <article>
-              <h3>Mr. Whiskers' First Birthday Party</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quod, voluptates, quae, quos quibusdam dolorum quia
-                nemo repudiandae quidem voluptatum quas. Quisquam quod,
-                voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
-                quidem voluptatum quas.
-              </p>
-            </article>
-        </section>
+        <h2>Posts</h2>
+
+        <article>
+          <h3>Mr. Whiskers' First Day Home</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+        </article>
+        <article>
+          <h3>Mr. Whiskers' First Bath</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+        </article>
+        <article>
+          <h3>Mr. Whiskers' First Birthday Party</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+          </p>
+        </article>
       </section>
     </main>
     <footer>
-          <section id="contact">
-            <h2>Contact</h2>
-            <!-- Add your contact information here -->
-          </section>
-          <p>&copy; 2024 Mr. Whiskers' Blog. All rights reserved.</p>
-        </footer>
+      <section id="contact">
+        <h2>Contact</h2>
+        <address>
+          1234 Make Believe Lane <br />
+          Pretend City, USA <br />
+          <p>Phone: 555-555-5555</p>
+          <p>Email: fake@email.com</p>
+        </address>
+      </section>
+      <p>&copy; 2025 Mr. Whiskers' Blog. All rights reserved.</p>
+    </footer>
   </body>
 </html>
